# grpc-sample

./: README.md  generate.ps1  pyproject.toml  requirements.txt
client/: echo_client.py
client/protos/: __init__.py  echo_msg_pb2_grpc.py
proto/: echo_msg.proto
server/: echo_server.py
server/protos/: __init__.py  echo_msg_pb2.py  echo_msg_pb2.pyi
