[tool.poetry]
name = "grpc-sample"
version = "0.1.0"
description = "This is a sample project of use gRPC"
authors = ["Sadegh Yazdani <silverstar10@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "grpc_sample"}]

[tool.poetry.dependencies]
python = "^3.8"
grpcio-tools = "^1.51.1"
grpcio = "^1.51.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
